syntax = "proto3";

package pb;

option go_package = "grpc-streams/pb";

service MyService {
  rpc GetUnary(MyUnaryRequest) returns (MyUnaryResponse) {}
  rpc GetServerStream(MyStreamRequest) returns (stream MyStreamResponse) {}
  rpc GetStream(stream MyStreamRequest) returns (stream MyStreamResponse) {}
}

message MyUnaryRequest {
  string value = 1;
}
message MyUnaryResponse {
  string value = 1;
}

// Request
message MyStreamRequest {
  string value = 1;
//  oneof event {
//    World world = 1;
//    Chunk chunk = 2;
//  }
}
message World {
  string value = 1;
}
message Chunk {
  string value = 1;
}


// Response
message MyStreamResponse {
  oneof event {
    Message message = 2;
    Shutdown server_shutdown = 3;
  }
  message Shutdown {}
}
message Message {
  string value = 1; // TODO Rename update
}
